# gist

./: .gitleaks.toml  .gitleaksignore  CHANGELOG.md  CLAUDE.md  README.md
.claude/: settings.json
_bmad/: status.md
infra/: Caddyfile  README.md  knowledge-vault.service  (+2 more)
knowledge-vault/: Cargo.toml
knowledge-vault/.cargo/: audit.toml
knowledge-vault/src/: lib.rs  main.rs
knowledge-vault/src/adapters/: mod.rs
knowledge-vault/src/adapters/gemini/: mod.rs
knowledge-vault/src/adapters/google_books/: mod.rs
knowledge-vault/src/adapters/nats/: consumer.rs  mod.rs  publisher.rs
knowledge-vault/src/adapters/openlib/: mod.rs
knowledge-vault/src/adapters/surreal/: concept_repo.rs  graph_read_repo.rs  graph_write_repo.rs  insight_repo.rs  login_attempt_repo.rs  mod.rs  schema.rs  token_repo.rs  user_repo.rs  work_repo.rs
knowledge-vault/src/app/: worker.rs
knowledge-vault/src/domain/: concept.rs  insight.rs  mod.rs  user.rs  work.rs
knowledge-vault/src/ports/: external.rs  messaging.rs  mod.rs  repository.rs
knowledge-vault/src/web/: mod.rs  router.rs  state.rs  ws_broadcaster.rs
knowledge-vault/src/web/handlers/: add_book.rs  auth.rs  failed_works.rs  graph.rs  health.rs  library.rs  mod.rs  setup.rs  tokens.rs  websocket.rs  work_detail.rs  works.rs
knowledge-vault/src/web/middleware/: auth.rs  mod.rs  security_headers.rs
knowledge-vault/tests/: add_book_test.rs  failed_works_test.rs  graph_test.rs  health_test.rs  integration.rs  library_test.rs  login_test.rs  pat_test.rs  setup_test.rs  works_test.rs
knowledge-vault/tests/integration/: nats_consumer.rs  surreal_concept_repo.rs  surreal_work_repo.rs  worker_pipeline.rs
(+30 files in other folders)
