[package]
name = "knowledge-vault"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
surrealdb = { version = "2", features = ["kv-mem", "kv-surrealkv"] }
argon2 = "0.5"
uuid = { version = "1", features = ["v4"] }
email_address = "0.2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["set-header"] }
http = "1"
rand = "0.8"
async-trait = "0.1"
anyhow = "1"

[dev-dependencies]
axum-test = "17"
